syntax = "proto3";

package lumen.release.v1;

option go_package = "lumen/x/release/types";

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "lumen/release/v1/types.proto";
import "lumen/release/v1/params.proto";

service Msg {
  option (cosmos.msg.v1.service) = true;

  rpc PublishRelease(MsgPublishRelease) returns (MsgPublishReleaseResponse);
  rpc YankRelease(MsgYankRelease) returns (MsgYankReleaseResponse);
  rpc MirrorRelease(MsgMirrorRelease) returns (MsgMirrorReleaseResponse);
  rpc SetEmergency(MsgSetEmergency) returns (MsgSetEmergencyResponse);
  rpc ValidateRelease(MsgValidateRelease) returns (MsgValidateReleaseResponse);
  rpc RejectRelease(MsgRejectRelease) returns (MsgRejectReleaseResponse);
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

message MsgPublishRelease {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  Release release = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty)=true];
}
message MsgPublishReleaseResponse { uint64 id = 1; }

message MsgYankRelease {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 id = 2;
}
message MsgYankReleaseResponse {}

message MsgMirrorRelease {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 id = 2;
  uint32 artifact_index = 3;
  repeated string new_urls = 4;
}
message MsgMirrorReleaseResponse { uint32 added = 1; }

message MsgSetEmergency {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 id = 2;
  bool emergency_ok = 3;
  int64 emergency_ttl = 4; // seconds from now (<= params.max_pending_ttl)
}
message MsgSetEmergencyResponse {}

message MsgValidateRelease {
  option (cosmos.msg.v1.signer) = "authority";
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 id = 2;
}
message MsgValidateReleaseResponse {}

message MsgRejectRelease {
  option (cosmos.msg.v1.signer) = "authority";
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 id = 2;
}
message MsgRejectReleaseResponse {}

message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "lumen/x/release/MsgUpdateParams";
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}
message MsgUpdateParamsResponse {}

